migrated to pygit2

--- a/conf/uwsgi.conf
+++ b/conf/uwsgi.conf
@@ -13,7 +13,8 @@ uwsgi:
     vacuum: True
 
     chdir: /home/chris/hosted/%(app_name)
-    virtualenv: /home/chris/.virtualenvs/%(app_name)
+    env: LIBGIT2=/home/chris/.virtualenvs/git2
+    virtualenv: /home/chris/.virtualenvs/git2
     pythonpath: /home/chris/hosted/%(app_name)
     module: wsgi:app
     need-app: True
