update required version of pygit2 (through a new virtualenv - dumb move)
Signed-off-by: Chris Ashurst <chris@tablethotels.com>

--- a/conf/uwsgi.conf
+++ b/conf/uwsgi.conf
@@ -13,8 +13,8 @@ uwsgi:
     vacuum: True
 
     chdir: /home/chris/hosted/%(app_name)
-    env: LIBGIT2=/home/chris/.virtualenvs/git2
-    virtualenv: /home/chris/.virtualenvs/git2
+    env: LIBGIT2=/home/chris/.virtualenvs/pygit22
+    virtualenv: /home/chris/.virtualenvs/pygit22
     pythonpath: /home/chris/hosted/%(app_name)
     module: wsgi:app
     need-app: True
